--- a/src/test/resources/features-templates/items/ItemValidLogoOrVideo.template
+++ b/src/test/resources/features-templates/items/ItemValidLogoOrVideo.template
@@ -1,5 +1,5 @@
 @validation
-@brands
+@items
 Feature: The Item Pages should have a visible Logo or visible Video
 
   Scenario Outline: I will validate the Brand Logo or Video
