--- a/src/test/resources/features-templates/base/PageBreadcrumbs.template
+++ b/src/test/resources/features-templates/base/PageBreadcrumbs.template
@@ -1,11 +1,11 @@
 @actionvalidation
 @all
-Feature: In every Page all breadcrumbs must go to correct links
+Feature: On both item and brand pages all breadcrumbs must go to correct links
 
   Scenario Outline: I will validate the navigation of the breadcrumbs
-    Given I want to check the breadcrumbs of "<URL>"
-    When I check all the breadcrumbs
-    Then the navigation must be valid
+    Given I want to check the breadcrumb of "<URL>"
+    When I click the link to navigate to each breadcrumb page
+    Then the breadcrumb page should exist and be the correct page
     Examples:
     | URL | SCENARIO-ID |
     <LOAD_BASE_URLS>
