--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -13,3 +13,5 @@ log4j.appender.file.File=logs/loging.log
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss,SSS} %5p %c{1}:%L - %m%n
 log4j.appender.file.Append=false
+
+log4j.logger.com.gargoylesoftware.htmlunit=ERROR
