--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 		<allure.adaptor.version>1.5.1</allure.adaptor.version>
 		<aspectj.version>1.8.7</aspectj.version>
 		<phantomdriver.version>1.2.1</phantomdriver.version>
-		<selenium.version>2.53.0</selenium.version>
+		<selenium.version>2.53.1</selenium.version>
 		<bitcoinj.version>0.13.6</bitcoinj.version>
 	</properties>
 
@@ -93,11 +93,11 @@
 			<artifactId>cucumber-reporting</artifactId>
 			<version>1.2.0</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
-			<artifactId>htmlunit-driver</artifactId>
-			<version>2.20</version>
+			<artifactId>selenium-htmlunit-driver</artifactId>
+			<version>2.52.0</version>
 		</dependency>
 
 		<dependency>
