--- a/src/test/resources/features-templates/itemsReview/ItemReviewValidHeaderOne.template
+++ b/src/test/resources/features-templates/itemsReview/ItemReviewValidHeaderOne.template
@@ -1,5 +1,5 @@
 @seo2
-@items
+@itemsReview
 Feature: The Item review Pages have a Header One matching the extracted Data
 
   Scenario Outline: I will validate the Brand Header One
