updating browserstack credentials and setting config to ON

--- a/src/test/resources/properties/TestConfig-BrowserStack.properties
+++ b/src/test/resources/properties/TestConfig-BrowserStack.properties
@@ -12,8 +12,8 @@ MAXIMUM_CRAWLS=1200
 #SELENIUM_DRIVER=LOCAL_FIREFOX
 #SELENIUM_DRIVER=LOCAL_HTMLUNIT
 SELENIUM_DRIVER=REMOTE_BROWSERSTACK
-BROWSERSTACK_USERNAME=
-BROWSERSTACK_KEY=
+BROWSERSTACK_USERNAME=andrew1133
+BROWSERSTACK_KEY=n4UsPjUQWoB7fsExknx8
 BROWSERSTACK_BROWSER=Firefox
 BROWSERSTACK_BROWSER_VERSION=35
 BROWSERSTACK_OS=Windows
